<resources>
    <string name="app_name">HealthyCollege</string>

    <!-- activity_login-->
    <string name="name">Healthy College</string>
    <string name="login_id">Email</string>
    <string name="login_password">Password</string>
    <string name="login">Login</string>
    <string name="checkMember">아직 회원이 아니신가요?</string>
    <string name="goToSignIn"><u><b>회원가입</b></u></string>

    <!-- activity_sign_up -->
    <string name="signUp">SIGN UP</string>
    <string name="signUpName">Name</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="major">Major</string>

    <!--fragment_ranking-->
    <string name="ranking">랭킹</string>


    <!-- fragment friend -->
    <string name="friend">친구</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>