<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:background="@color/main_yellow">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginBottom="70dp"
            android:textAlignment="center"
            android:textColor="@color/main_blue"
            android:textSize="40dp" />

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_blank_white"
            android:cursorVisible="true"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="15dp"
            android:hint="@string/login_id"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions|textEmailAddress"
            android:paddingVertical="15dp"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="@color/main_blue"
            android:textColorHint="@color/main_blue"
            android:textSize="15dp"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_blank_white"
            android:cursorVisible="true"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="15dp"
            android:hint="@string/login_password"
            android:textSize="15dp"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions|textPassword"
            android:paddingVertical="15dp"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColorHint="@color/main_blue"
            android:textColor="@color/main_blue"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/signInBtn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/yellow_button"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="17dp"
            android:textColor="@color/main_blue"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                style="?android:attr/borderlessButtonStyle"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/checkMember"
                android:textColor="@color/main_blue"
                android:textSize="15dp" />

            <Button
                android:id="@+id/signUpBtn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/goToSignIn"
                android:textAllCaps="false"
                android:textColor="@color/main_blue"
                android:textSize="15dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
